[gd_scene load_steps=2 format=3 uid="uid://bk15h3dxda4v0"]

[ext_resource type="Script" path="res://prefab/utils/SoundController.gd" id="1_8er4f"]

[node name="SoundController" type="Node2D"]
script = ExtResource("1_8er4f")

[node name="MoveSound" type="AudioStreamPlayer2D" parent="."]
max_distance = 156.0
bus = &"Ambiente"

[node name="RunSound" type="AudioStreamPlayer2D" parent="."]
max_distance = 156.0
bus = &"Ambiente"

[node name="ImpactPlayer" type="AudioStreamPlayer2D" parent="."]
max_distance = 156.0
bus = &"Ambiente"

[node name="CastPlayer" type="AudioStreamPlayer2D" parent="."]
max_distance = 156.0
bus = &"Ambiente"

[node name="AttackPlayer" type="AudioStreamPlayer2D" parent="."]
max_distance = 156.0
bus = &"Ambiente"

[node name="Timer" type="Timer" parent="."]
one_shot = true
